--- a/style.css
+++ b/style.css
@@ -26,3 +26,34 @@
 .item:hover{
     color:skyblue ;
 }
+.banner-img{
+    width: 300px;
+}
+.banner-conteiner{
+    color: white;
+    display: flex;
+    justify-content: space-around;
+    height: 100vh;
+    align-items: center;
+    background-image: url(Images/background.png),
+    linear-gradient(45deg, rgb(8,8,8),#101010 );
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.title{
+    font-size: 55px;
+    font-weight: bold;
+}
+.paragraph{
+    font-size: 18px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+.button{
+    color:gainsboro;
+    padding:15px 20px;
+    background-color:red;
+    border: none;
+    border-radius: 4px;
+}
