--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@
     color: white;
     text-align: center;
     padding: 15px;
-    border-radius: 4px;
+    border-radius: 15px;
 }
 .icon{
     width: 130px;
@@ -99,7 +99,6 @@
     margin-top: 10px;
 }
 .p-paragraph{
-    /* font-size: 17px; */
     text-align: justify;
     padding: 6px;
 }
@@ -111,11 +110,40 @@
 .service-conteiner1{
     height: 55vh;
     background-image: url(Images/background.png),
-    linear-gradient(45deg, rgb(8,8,8),#101010 );
+    linear-gradient(45deg, rgb(31, 31, 31),#000000 );
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
 }
 .title3{
     color: aliceblue;
+}
+.foot-conteiner{
+    background-color: black;
+    height: 60vh;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    color: white;
+    padding: 30px 150px;
+}
+.div1-edits{
+    font-size: 18px;
+    font-weight: bold;
+    text-align: justify;
+    padding: 5px 5px 5px 0px ;
+}
+.icon2{
+width: 200px;
+padding: 20px 20px 20px 0px;
+}
+.ul{
+    list-style: none;
+}
+.h3-footer {
+    padding:10px 10px 10px 0px;
+}
+.copy{
+    color: white;
+    background-color: black;
 }
